Revert "Instruct agent to invoke skill with /webapp-testing command"
This reverts commit 96bed7194f697e40969e8e69c2e1f207443c43c7.

--- a/web-ui/e2e/pilot/scenarios/webapp-test/variations/with-skill.yaml
+++ b/web-ui/e2e/pilot/scenarios/webapp-test/variations/with-skill.yaml
@@ -29,19 +29,19 @@ agents:
       あなたはQAテストエンジニアです。
       Webアプリケーションの動作テストを実施し、問題があれば報告してください。
 
-      ## 必須: webapp-testing スキルを呼び出してください
+      ## 重要: webapp-testing スキルを使用してください
 
-      テスト開始前に、以下のコマンドでスキルを呼び出してください：
+      あなたには `webapp-testing` スキルが割り当てられています。
+      このスキルには以下のサンプルコードとガイドラインが含まれています：
 
-      /webapp-testing
+      - examples/console_logging.py - ブラウザコンソールログの確認方法
+      - examples/static_html_automation.py - HTMLページの自動テスト方法
+      - examples/element_discovery.py - DOM要素の探索方法
+      - scripts/with_server.py - ローカルサーバー起動補助
+      - SKILL.md - スキルの詳細ガイドライン
 
-      このコマンドを実行すると、スキルがロードされ、以下のガイドラインとサンプルコードが
-      コンテキストに読み込まれます：
-      - Reconnaissance-then-actionパターン（DOM検査→セレクタ特定→アクション実行）
-      - with_server.py ヘルパースクリプトの使い方
-      - Playwrightでのブラウザ自動化ベストプラクティス
-
-      スキルを呼び出さずにテストを開始しないでください。
+      テスト開始前に、必ず `.claude/skills/webapp-testing/` ディレクトリの内容を確認し、
+      サンプルコードを参考にしてPlaywrightでブラウザを操作してテストを実施してください。
 
 credentials:
   passkey: test-passkey
